<resources>
    <string name="app_name">WanAndroid</string>
    <string name="text_pet_name">昵称</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navi_close">close</string>
    <string name="navi_open">open</string>

    <string name="text_login">登录</string>
    <string name="login_account_tint">请输入用户名</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="or">或</string>
    <string name="register">注册</string>
    <string name="text_or">或</string>
    <string name="text_regist">注册</string>
</resources>
